adding nav and img

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,6 +5,7 @@
   .intro {
 
     h2 {
+      
       padding: 15px;
     }
 
@@ -57,7 +58,12 @@
         margin-bottom: 26px;
       }
 
-      .btn {
+      button {
+        font-size: 2rem;
+        border-radius: .52rem;
+        background-color: black;
+        color:white;
+        padding: 1rem;
       }
     }
 
