--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,21 @@
 // Navigation code here
+.topBack{
+     background-color: cornsilk;}
+    h1{
+        text-align: center;
+        font-size: 3.8rem;
+    }
+    nav{
+        display:flex;
+        justify-content: center;
+       
+       
+        a{
+            text-decoration: none;
+            color:black;
+            font-size: 2.2rem;
+            margin:3rem;
+            
+        }
+
+    }
