--- a/less/home-page.less
+++ b/less/home-page.less
@@ -60,10 +60,12 @@
 
       button {
         font-size: 2rem;
-        border-radius: .52rem;
-        background-color: black;
+        border-radius: 1rem;;
+        background-color:black;
         color:white;
-        padding: 1rem;
+        padding:5px;
+        padding-left: 25px;
+        padding-right: 25px;
       }
     }
 
