--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,9 +1,12 @@
 // Navigation code here
 .topBack{
-     background-color: cornsilk;}
+    background-color: azure;
+}
     h1{
+        padding-top:2rem;
         text-align: center;
         font-size: 3.8rem;
+        
     }
     nav{
         display:flex;
@@ -15,6 +18,7 @@
             color:black;
             font-size: 2.2rem;
             margin:3rem;
+           
             
         }
 
