adding mobile media querys

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,7 +6,7 @@
         padding-top:2rem;
         text-align: center;
         font-size: 3.8rem;
-        
+    
     }
     nav{
         display:flex;
@@ -18,7 +18,9 @@
             color:black;
             font-size: 2.2rem;
             margin:3rem;
-           
+            @media (max-width:500px){
+               font-size: 1.8rem;
+              }
             
         }
 
