--- a/css/index.css
+++ b/css/index.css
@@ -178,6 +178,11 @@ nav a {
   font-size: 2.2rem;
   margin: 3rem;
 }
+@media (max-width: 500px) {
+  nav a {
+    font-size: 1.8rem;
+  }
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -205,32 +210,53 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
-.home .visit-planets {
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images img .sky {
+    display: none;
+  }
+}
+.visit-planets {
   padding: 15px;
 }
-.home .visit-planets h3 {
+.visit-planets h3 {
   margin-top: 11px;
 }
-.home .visit-planets p {
+.visit-planets p {
   margin-top: 13px;
 }
-.home .walk {
+.walk {
   margin-top: 60px;
   border-top: 1px solid #dee2e6;
   padding: 50px 60px;
   display: flex;
   justify-content: center;
 }
-.home .walk .walk-text {
+@media (max-width: 500px) {
+  .walk {
+    flex-direction: column-reverse;
+    align-content: center;
+  }
+}
+.walk .walk-text {
   width: 50%;
 }
-.home .walk .walk-text h3 {
+@media (max-width: 500px) {
+  .walk .walk-text {
+    width: 100%;
+  }
+}
+.walk .walk-text h3 {
   margin-bottom: 10px;
 }
-.home .walk .walk-text p {
+.walk .walk-text p {
   margin-bottom: 26px;
 }
-.home .walk .walk-text button {
+.walk .walk-text button {
   font-size: 2rem;
   border-radius: 1rem;
   background-color: black;
@@ -239,11 +265,21 @@ footer {
   padding-left: 25px;
   padding-right: 25px;
 }
-.home .walk .walk-img {
+@media (max-width: 500px) {
+  .walk .walk-text button {
+    width: 100%;
+  }
+}
+.walk .walk-img {
   width: 46%;
   margin-left: 4%;
 }
-.home .walk .walk-img img {
+@media (max-width: 500px) {
+  .walk .walk-img {
+    width: 100%;
+  }
+}
+.walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
