--- a/less/home-page.less
+++ b/less/home-page.less
@@ -24,7 +24,16 @@
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
-      height: 100%;
+      height: 100%;  
+      @media (max-width:500px){
+        width:100%
+        }
+        .sky{
+        @media (max-width:500px){
+          display:none;
+        }
+      }
+      }
     }
   }
 
@@ -46,10 +55,15 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
-
+    @media (max-width:500px){
+      flex-direction: column-reverse;
+      align-content: center;
+    }
     .walk-text {
       width: 50%;
-
+      @media (max-width:500px){
+        width:100%
+      }
       h3 {
         margin-bottom: 10px;
       }
@@ -66,13 +80,18 @@
         padding:5px;
         padding-left: 25px;
         padding-right: 25px;
+        @media (max-width:500px){
+          width:100%
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+      @media (max-width:500px){
+        width:100%
+      }
       img {
         width: 100%;
         height: auto;
@@ -80,4 +99,4 @@
       }
     }
   }
-}// home
+// home
