--- a/css/index.css
+++ b/css/index.css
@@ -193,6 +193,11 @@ footer {
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 500px) {
+  .home img {
+    width: 100%;
+  }
+}
 .home .intro h2 {
   padding: 15px;
 }
@@ -215,11 +220,6 @@ footer {
     width: 100%;
   }
 }
-@media (max-width: 500px) {
-  .home .space-images img .sky {
-    display: none;
-  }
-}
 .visit-planets {
   padding: 15px;
 }
@@ -240,6 +240,7 @@ footer {
   .walk {
     flex-direction: column-reverse;
     align-content: center;
+    padding: 5px;
   }
 }
 .walk .walk-text {
@@ -268,6 +269,9 @@ footer {
 @media (max-width: 500px) {
   .walk .walk-text button {
     width: 100%;
+    padding: 0px;
+    padding-left: 0%;
+    padding-right: 0%;
   }
 }
 .walk .walk-img {
@@ -277,10 +281,22 @@ footer {
 @media (max-width: 500px) {
   .walk .walk-img {
     width: 100%;
+    margin-left: 0px;
+    margin: 1rem;
   }
 }
 .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .launch {
+    display: none;
+  }
 }
