--- a/less/home-page.less
+++ b/less/home-page.less
@@ -75,16 +75,17 @@
       button {
         font-size: 2rem;
         border-radius: 1rem;;
-        background-color:black;
-        color:white;
+        background-color: .buttonColor;
+        color: .buttonText;
         padding:5px;
         padding-left: 25px;
         padding-right: 25px;
         @media (max-width:500px){
           width:100%;
-          padding:0px;
+          padding:1rem;
           padding-left: 0%;
           padding-right: 0%;
+          border-radius: .2rem;
 
         }
       }
