--- a/less/home-page.less
+++ b/less/home-page.less
@@ -97,7 +97,7 @@
       @media (max-width:500px){
         width:100%;
         margin-left:0px;
-        margin: 1rem;
+        margin: .onerem;
       }
       img {
         width: 100%;
@@ -108,12 +108,12 @@
   }
   .sky{
   @media (max-width:500px){
-    display: none;
+    display: .dissapear;
     }
   }
   .launch{
     @media (max-width:500px){
-      display:none;
+      display: .dissapear;
     }
   }
   // home
