--- a/less/variables.less
+++ b/less/variables.less
@@ -23,4 +23,8 @@
 @btn-bg-color: #22283A;
 @border-real: #dee2e6;
 
+@buttonColor: black;
+@buttonText: white;
 // Mobile var
+@dissapear: none;
+@onerem: 1rem;
